// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel should render 1`] = `
<Translate(SidePanel)
  docked={false}
  getComponent={[Function]}
  onToggleDock={[Function]}
/>
`;

exports[`SidePanel should render provided actions as string 1`] = `
<Translate(SidePanel)
  actions={
    Array [
      "menu:article",
      "menu:demo",
    ]
  }
  docked={false}
  getComponent={[Function]}
  onToggleDock={[Function]}
/>
`;
